# wasm-cxx-shim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: ci.yml
LICENSES/: LICENSE-dlmalloc  README.md
cmake/: WasmCxxShimConfig.cmake.in  WasmCxxShimManifold.cmake  check-manifold-helper.cmake  toolchain-wasm32.cmake
cmake/manifold-patches/: 0001-clipper2-strip-iostream.patch  0001-manifold-no-iostream.patch  0003-manifold-test-main-ifdef-filesystem.patch
docs/: context.md  plan.md
libc/: CMakeLists.txt  README.md
libc/include/: alloca.h  endian.h  stdio.h  stdlib.h  string.h  time.h  wchar.h
libc/src/dlmalloc/: dlmalloc.c  sbrk.c
libcxx/: CMakeLists.txt  README.md
libcxx/src/: cxa.cpp  exception.cpp  operator_new_delete.cpp  stubs.cpp  verbose_abort.cpp
libm/: CMakeLists.txt  README.md
libm/include/: features.h  math.h
libm/include/bits/: alltypes.h
libm/src/internal/: atomic.h  atomic_arch.h  endian.h  features.h  fp_arch.h  libm.h
scripts/: fetch-libm-sources.sh
test/consumer/: CMakeLists.txt  run-consumer-test.sh
test/libm-check/: CMakeLists.txt  README.md  libm_check.cpp
test/manifold-link/: CMakeLists.txt  README.md  libcxx-extras.cpp  probe.c  run.mjs
test/manifold-link/include/: mutex
test/manifold-link/patches/: 0002-manifold-ifdef-iostream.patch
test/manifold-tests/: CMakeLists.txt  README.md
test/negative-link/: CMakeLists.txt  README.md  expect-link-failure.sh  uses_unimplemented.c
test/smoke/: CMakeLists.txt  README.md  check-imports.sh  check-size.sh  run.mjs  smoke.cpp
test/smoke/include/: __assertion_handler  __config_site
tools/wasm-test-harness/: CMakeLists.txt  README.md  run.mjs
tools/wasm-test-harness/adapters/gtest/gtest/: gtest.h
tools/wasm-test-harness/include/: wcs-test.h
tools/wasm-test-harness/src/: harness.c
tools/wasm-test-harness/test/: CMakeLists.txt  run.mjs  self_test.cpp
